# Copyright 2015 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_win) {
  copy("default_extensions") {
    sources = [ "external_extensions.json",
    "extension.crx" ]
    outputs = [ "$root_out_dir/extensions/{{source_file_part}}" ]
  }

}

if (!is_win) {
  copy("default_extensions") {
    sources = [ "external_extensions.json",
    "extension.crx" ]
    outputs = [ "$root_out_dir/extensions/{{source_file_part}}" ]
  }

}